tests/fails/any_not_empty.stderr
error: No argument allowed
 --> $DIR/any_not_empty.rs:4:18
  |
4 |     let _wrong = any!(C);
  |                  ^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected expression, found end of macro arguments
 --> $DIR/any_not_empty.rs:4:18
  |
4 |     let _wrong = any!(C);
  |                  ^^^^^^^
